frame/support/test/tests/pallet_ui/storage_info_unsatisfied.stderr
error[E0277]: the trait bound `Bar: MaxEncodedLen` is not satisfied
 --> tests/pallet_ui/storage_info_unsatisfied.rs:9:12
  |
9 |     #[pallet::pallet]
  |               ^^^^^^ the trait `MaxEncodedLen` is not implemented for `Bar`
  |
  = note: required because of the requirements on the impl of `StorageInfoTrait` for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>`
